--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ httpx==0.28.0
 huggingface-hub==0.26.3
 idna==3.10
 Jinja2==3.1.4
+kaleido==0.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -28,6 +29,7 @@ orjson==3.10.12
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+plotly==5.24.1
 pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
@@ -49,6 +51,7 @@ shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.3
+tenacity==9.0.0
 tomlkit==0.12.0
 tqdm==4.67.1
 typer==0.14.0
