--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 cryptography==44.0.0
+cssselect2==0.7.0
 Deprecated==1.2.15
 exceptiongroup==1.2.2
 fastapi==0.115.5
 ffmpy==0.4.0
 filelock==3.16.1
+fonttools==4.55.3
 fsspec==2024.10.0
 gradio==5.7.1
 gradio_client==1.5.0
@@ -21,7 +24,9 @@ huggingface-hub==0.26.3
 idna==3.10
 Jinja2==3.1.4
 kaleido==0.2.1
+Markdown==3.7
 markdown-it-py==3.0.0
+markdown_pdf==1.3.2
 MarkupSafe==2.1.5
 mdurl==0.1.2
 numpy==2.1.3
@@ -34,10 +39,14 @@ pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 pydub==0.25.1
+pydyf==0.11.0
 PyGithub==2.5.0
 Pygments==2.18.0
 PyJWT==2.10.1
+PyMuPDF==1.24.2
+PyMuPDFb==1.24.1
 PyNaCl==1.5.0
+pyphen==0.17.0
 python-dateutil==2.9.0.post0
 python-multipart==0.0.12
 pytz==2024.2
@@ -52,6 +61,8 @@ six==1.16.0
 sniffio==1.3.1
 starlette==0.41.3
 tenacity==9.0.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 tomlkit==0.12.0
 tqdm==4.67.1
 typer==0.14.0
@@ -59,5 +70,8 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.1
+weasyprint==63.1
+webencodings==0.5.1
 websockets==12.0
 wrapt==1.17.0
+zopfli==0.2.3.post1
